tests/ui/typeck/invalid-sugg-for-derive-macro-issue-136343.stderr
error[E0308]: mismatched types
  --> $DIR/invalid-sugg-for-derive-macro-issue-136343.rs:7:10
   |
LL | #[derive(Sample)]
   |          ^^^^^^
   |          |
   |          expected type parameter `U`, found type parameter `T`
   |          expected `U` because of return type
   |
   = note: expected type parameter `U`
              found type parameter `T`
   = note: a type parameter was expected, but a different one was found; you might be missing a type parameter or trait bound
   = note: for more information, visit https://doc.rust-lang.org/book/ch10-02-traits.html#traits-as-parameters
   = note: the caller chooses a type for `U` which can be different from `T`
   = note: this error originates in the derive macro `Sample` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
